[package]
name = "temps-compose"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
temps-auth = { path = "../temps-auth" }
temps-config = { path = "../temps-config" }
temps-core = { path = "../temps-core" }
temps-entities = { path = "../temps-entities" }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
utoipa = { workspace = true }
axum = { workspace = true }
async-trait = { workspace = true }
bollard = { workspace = true }
futures-util = { workspace = true }
git2 = "0.20.4"
serde_yaml = { workspace = true }

[dev-dependencies]
sea-orm = { workspace = true, features = ["mock"] }
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
