[package]
name = "temps-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core utilities and shared types for the Temps platform"
keywords = ["platform", "utilities", "deployment"]
categories = ["development-tools"]
readme = "README.md"

[dependencies]
# Core utilities - no dependencies on other crates
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
tower-http = { workspace = true }
aes-gcm = "0.10"
base64 = { workspace = true }
hkdf = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
hmac = "0.13"
x25519-dalek = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
url = "2.5"  # For URL validation and SSRF prevention
cookie = { workspace = true }
ipnet = "2.10"
arc-swap = "1.7"
# Per-cluster CA + per-node certificate issuance for multi-node mTLS (ADR-020 WS-2.1).
# x509-parser feature enables loading an existing CA and parsing CSRs. Uses the
# workspace 0.14.8; node_pki.rs was migrated to the 0.14 `Issuer` API in #250
# (merged from main), so the earlier 0.13.2 pin is no longer needed.
rcgen = { workspace = true }

# Internal dependencies - only core dependencies to avoid cycles
temps-memory = { path = "../temps-memory" }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true }
