[package]
name = "temps-domains"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
temps-auth = { path = "../temps-auth" }
temps-config = { path = "../temps-config" }
temps-core = { path = "../temps-core" }
temps-database = { path = "../temps-database" }
temps-dns = { path = "../temps-dns" }
temps-entities = { path = "../temps-entities" }
axum = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
sea-orm = { workspace = true }
hickory-resolver = "0.26"
instant-acme = "0.8.5"
hyper = { version = "1", default-features = false }
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "http2", "tls12", "ring"] }
hyper-util = { version = "0.1", default-features = false, features = ["client", "client-legacy", "http1", "tokio"] }
http-body-util = "0.1"
bytes = "1"
rustls-native-certs = "0.8"
rcgen = { version = "0.14.8", features = ["x509-parser"] }
thiserror = { workspace = true }
rustls = { version = "0.23", default-features = false, features = [
    "std",
    "tls12",
    "logging",
]}
rustls-pemfile = "2.1.3"
anyhow = { workspace = true }
async-trait = { workspace = true }
cloudflare = {  git="https://github.com/cloudflare/cloudflare-rs", rev = "85fc25c" }
x509-parser = "0.18.0"
rustls-pki-types = "1.12.0"
time = "0.3.47"
sha2 = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
testcontainers = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
axum-test = "16.3"
webpki-roots = "0.26"
bollard = { workspace = true }
futures-util = { workspace = true }
tar = { workspace = true }
