[package]
name = "temps-edge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
temps-core = { path = "../temps-core" }
temps-file-store = { path = "../temps-file-store" }

aes-gcm = { workspace = true }
axum = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
dirs = "5.0"
flate2 = { workspace = true }
gethostname = "1.1"
hkdf = { workspace = true }
http = { workspace = true }
pingora = { workspace = true }
pingora-core = { workspace = true }
pingora-openssl = "0.8.0"
pingora-proxy = { workspace = true }
pingora-http = "0.8.0"
rand = { workspace = true }
reqwest = { workspace = true }
rustls-pemfile = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
x25519-dalek = { workspace = true }

[dev-dependencies]
http-body-util = { workspace = true }
tempfile = { workspace = true }
tokio-test = "0.4"
tower = { workspace = true }
