[package]
name = "temps-email-tracking"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
temps-auth = { path = "../temps-auth" }
temps-core = { path = "../temps-core" }
temps-config = { path = "../temps-config" }
temps-database = { path = "../temps-database" }
temps-email = { path = "../temps-email" }
temps-entities = { path = "../temps-entities" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sea-orm = { workspace = true }

# Web framework
axum = { workspace = true }

# OpenAPI
utoipa = { workspace = true }

# Error handling & logging
thiserror = { workspace = true }
tracing = { workspace = true }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }
urlencoding = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }

# HMAC for click tracking signatures
hmac = "0.13"

# Streaming HTML rewriter for pixel injection + link rewriting
lol_html = "3"

# HTTP client for SNS cert fetching + subscription confirmation
reqwest = { workspace = true }

# RSA signature verification for AWS SNS message authenticity (SignatureVersion
# 1 = SHA1, 2 = SHA256). Pinned to the 0.10 digest generation rather than the
# workspace's sha2 (0.11, used above for HMAC click-tracking signatures,
# unrelated) because `rsa` 0.9's Pkcs1v15Sign requires digest 0.10's
# AssociatedOid trait.
rsa = "0.9"
sha1 = { version = "0.10", features = ["oid"] }
sha2-rsa = { package = "sha2", version = "0.10", features = ["oid"] }
x509-parser = "0.18"

[dev-dependencies]
tokio-test = "0.4"
temps-migrations = { path = "../temps-migrations" }
