[package]
name = "temps-external-plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
temps-core = { path = "../temps-core" }
temps-config = { path = "../temps-config" }
axum = { workspace = true }
hyper = { workspace = true }
hyper-util = { version = "0.1", features = ["tokio", "client-legacy"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
utoipa = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
