[package]
name = "temps-git-credential"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

# Two binaries + a shared library:
#   - `temps-git-credential-helper`: invoked by git via `credential.helper`.
#     Tiny stdin/stdout shim, no secrets.
#   - `temps-git-credential-daemon`: long-running process inside the
#     sandbox container (different uid from user code) that holds the
#     workspace's deployment token and mints scoped tokens by calling the
#     control plane.
[[bin]]
name = "temps-git-credential-helper"
path = "src/bin/helper.rs"

[[bin]]
name = "temps-git-credential-daemon"
path = "src/bin/daemon.rs"

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
nix = { version = "0.31", features = ["socket", "user"] }

[dev-dependencies]
tempfile = "3.10"
