[package]
name = "temps-log-aggregator"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
temps-auth = { path = "../temps-auth" }
temps-core = { path = "../temps-core" }
temps-database = { path = "../temps-database" }
temps-entities = { path = "../temps-entities" }

sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { version = "0.1.17", features = ["sync"] }
chrono = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
axum = { workspace = true }
utoipa = { workspace = true }
bollard = { workspace = true }
aws-sdk-s3 = { workspace = true }
zstd = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
sea-orm = { workspace = true, features = ["mock"] }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
axum-test = "18.1.0"
serial_test = "3.2"
async-trait = { workspace = true }
reqwest = { workspace = true }
temps-database = { path = "../temps-database" }
temps-auth = { path = "../temps-auth" }
temps-entities = { path = "../temps-entities" }
