[package]
name = "temps-metrics"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
async-trait = { workspace = true }
sea-orm = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# ClickHouse metrics store (opt-in via TEMPS_CLICKHOUSE_*; TimescaleDB remains
# the default). Version/features mirror temps-otel's CH backend.
clickhouse = { version = "0.15", features = ["uuid", "chrono"] }

# Scraper: entity access and config
temps-core = { path = "../temps-core" }
temps-config = { path = "../temps-config" }
temps-entities = { path = "../temps-entities" }

# Postgres collector
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }

# MongoDB collector. Use mongodb's own re-exported `mongodb::bson` types
# rather than a standalone `bson` dependency — a standalone version can drift
# out of sync with whatever bson version `mongodb` pins internally.
mongodb = "3.7.0"

# Redis collector
redis = { workspace = true }

# S3 collector
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }
aws-credential-types = "1.2"
aws-smithy-http-client = { version = "1.1", default-features = false, features = ["rustls-aws-lc"] }
webpki-root-certs = "1.0"
pem = "3"
reqwest = { workspace = true }

# Node collector (Linux /proc + statvfs)
libc = "0.2"

[dev-dependencies]
testcontainers = { workspace = true }
