[package]
name = "temps-monitoring"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
temps-core = { path = "../temps-core" }
temps-config = { path = "../temps-config" }
temps-database = { path = "../temps-database" }
temps-entities = { path = "../temps-entities" }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
sysinfo = "0.33"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
