[package]
name = "temps-monitoring"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
temps-core = { path = "../temps-core" }
temps-config = { path = "../temps-config" }
temps-database = { path = "../temps-database" }
temps-deployer = { path = "../temps-deployer" }
temps-entities = { path = "../temps-entities" }
temps-metrics = { path = "../temps-metrics" }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
maplit = "1.0"
