[package]
name = "temps-observability"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
temps-auth = { path = "../temps-auth" }
temps-core = { path = "../temps-core" }
temps-database = { path = "../temps-database" }
temps-entities = { path = "../temps-entities" }
temps-otel = { path = "../temps-otel" }
temps-proxy = { path = "../temps-proxy" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sea-orm = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
http = { workspace = true }
utoipa = { workspace = true, features = ["chrono"] }
tracing = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
temps-geo = { path = "../temps-geo" }
temps-migrations = { path = "../temps-migrations" }
# Real-ClickHouse regression test (clickhouse_observe_test.rs) — same pinned
# client/testcontainers pattern as temps-otel's clickhouse_storage_test.rs.
clickhouse = { version = "0.15", features = ["uuid", "chrono"] }
testcontainers = { workspace = true, features = ["http_wait_plain"] }
sea-orm-migration = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
