[package]
name = "temps-otel"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Internal crates
temps-core = { path = "../temps-core" }
temps-ai = { path = "../temps-ai" }
temps-config = { path = "../temps-config" }
temps-database = { path = "../temps-database" }
temps-entities = { path = "../temps-entities" }
temps-deployer = { path = "../temps-deployer" }
temps-auth = { path = "../temps-auth" }
temps-metrics = { path = "../temps-metrics" }
temps-monitoring = { path = "../temps-monitoring" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling & logging
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# Date/Time & UUID
chrono = { workspace = true }
uuid = { workspace = true }

# Database
sea-orm = { workspace = true }

# HTTP framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
hyper = { workspace = true }

# API documentation
utoipa = { workspace = true }

# Protobuf for OTLP
prost = "0.14"

# Compression
flate2 = { workspace = true }
zstd = "0.13"

# S3 for log archival
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }

# Crypto for API key hashing
sha2 = { workspace = true }
hex = { workspace = true }

# ClickHouse client — compiled unconditionally; activated at runtime by
# ServerConfig::is_clickhouse_enabled() (TEMPS_CLICKHOUSE_* env vars).
clickhouse = { version = "0.13", features = ["uuid", "chrono"] }

# Rate limiting
tokio-util = { workspace = true }

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tower = { workspace = true }
http-body-util = { workspace = true }
temps-migrations = { path = "../temps-migrations" }
# For the no-op AuditLogger used in the e2e handler test (AuditLogger is an
# #[async_trait] returning anyhow::Result).
async-trait = { workspace = true }
anyhow = { workspace = true }
# Real-ClickHouse integration tests (clickhouse_storage_test.rs). Pinned to the
# workspace version to avoid the transitive-tree conflict resolved at 0.27.2.
# `http_wait_plain` enables the HTTP /ping readiness wait — the clickhouse-server
# image never logs "Ready for connections" to stdout/stderr, only to its log file.
testcontainers = { workspace = true, features = ["http_wait_plain"] }
